--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Read and write client data for OAP Law Firm",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "author": "davisnoah",
   "license": "ISC",
