--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "davisnoah",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv": "^6.2.6",
     "express": "^4.18.2"
   }
